# awesome-corporate-dev

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yaml  pyproject.toml
competency-matrix/: index.html
competency-matrix/python-backend/: index.html
docs/: index.md
docs/competency-matrix/: python-backend.md
search/: search_index.json
