[tool.poetry]
name = "awesome-corporate-dev"
version = "0.1.0"
description = ""
authors = ["Egor <slamihin123@gmail.com>"]
readme = "README.md"
packages = [{include = "awesome_corporate_dev"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "1.5.3"
mkdocs-material = "^9.5.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
